# Soundscapy

./: .bumpversion.cfg  .dockerignore  .envrc  .gitignore  .markdownlint.yaml  .pdm-python  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  CHANGELOG.md  CITATION.cff  CLAUDE.local.md  CLAUDE.md  CONTRIBUTING.md  DESCRIPTION  ISD-Plotting-Demo.ipynb  LICENSE  LICENSE.md  Loudness.csv  MANIFEST.in  README.md  SpecLoudness.csv  SurveyFrame.ipynb  citation.cff  conftest.py  environment.yaml  environment.yml  isd-dev.yml  isd.py  mkdocs.yml  pixi.toml  pyproject-pixi.toml  pyproject.toml  requirements.txt  setup.py  ssidAnalysis.py  ssidDatabase.py  test_database.py  tox.ini  update-environment-yml.sh  (+1 more)
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json  docker-compose.yaml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml  question.yml
.github/workflows/: anaconda-package.yml  ci.yml  docs.yml  linting.yml  python-package-conda.yml  python-package.yml  release.yml  tag-release.yml  test-conda-install.yml  test-release.yml  test-tag-release.yml  test-tutorials.yml  test.yml  update-environment.yml
.pixi/: config.toml
ai_dev_docs/: simplify_optional_deps_plan.md
ai_dev_docs/spi/: phase1_plan.md  phase2_plan.md  phase3_plan.md  phase4_plan.md  plan.md
docs/: CHANGELOG.md  CONTRIBUTING.md  Makefile  _plan.md  api.rst  background.md  conf.py  index.md  index.rst  license.md  migration-0.7-to-0.8.md  news.md  requirements.txt  tutorials.rst  usage.rst
docs/_static/: readthedocs-custom.css
docs/_templates/: custom-class-template.rst
docs/developer/: index.md  r-internals.md
docs/javascripts/: mathjax.js
docs/reference/: analysis.md  api.md  audio.md  databases.md  index.md  plotting.md  satp.md  soundscapy.md  spi.md  surveys.md
docs/stylesheets/: extra.css
docs/tutorials/: .gitignore  0_QuickStart_for_Beginners.ipynb  0_QuickStart_for_Beginners.md  1_Understanding_Soundscape_Analysis.ipynb  1_Understanding_Soundscape_Analysis.md  2_Working_with_Soundscape_Survey_Data.ipynb  2_Working_with_Soundscape_Survey_Data.md  3_Advanced_Visualization_Techniques.ipynb  3_Advanced_Visualization_Techniques.md  4_Understanding_Soundscape_Perception_Index.ipynb  4_Understanding_Soundscape_Perception_Index.md  5_Working_with_Soundscape_Databases.ipynb  5_Working_with_Soundscape_Databases.md  6_Soundscape_Assessment_Tutorial.ipynb  6_Soundscape_Assessment_Tutorial.md  BinauralAnalysis.ipynb  BinauralAnalysis.md  BinauralAnalysis.py  HowToAnalyseAndRepresentSoundscapes.ipynb  HowToAnalyseAndRepresentSoundscapes.md  HowToAnalyseAndRepresentSoundscapes.py  IoA_Soundscape_Assessment_Tutorial.ipynb  IoA_Soundscape_Assessment_Tutorial.md  MultiVariateSkewNorm.ipynb  MultivariateSkewNormal.ipynb  MultivariateSkewNormalDemo.py  QuickStart.ipynb  QuickStart.md  QuickStart.py  SATP_CircE_Analysis.qmd  SoundscapePerceptionIndex-SPI.ipynb  SoundscapePerceptionIndex-SPI.md  example_settings.yaml  index.md
examples/: .gitignore  0_QuickStart_for_Beginners.ipynb  0_QuickStart_for_Beginners.qmd  1_Understanding_Soundscape_Analysis.ipynb  1_Understanding_Soundscape_Analysis.qmd  2_Working_with_Soundscape_Survey_Data.ipynb  2_Working_with_Soundscape_Survey_Data.qmd  3_Advanced_Visualization_Techniques.ipynb  3_Advanced_Visualization_Techniques.qmd  4_Understanding_Soundscape_Perception_Index.ipynb  4_Understanding_Soundscape_Perception_Index.qmd  5_Working_with_Soundscape_Databases.ipynb  5_Working_with_Soundscape_Databases.qmd  6_Soundscape_Assessment_Tutorial.ipynb  6_Soundscape_Assessment_Tutorial.qmd  BinauralAnalysis.ipynb  BinauralAnalysis.qmd  HowToAnalyseAndRepresentSoundscapes.ipynb  HowToAnalyseAndRepresentSoundscapes.qmd  IoA_Marimo.py  IoA_Soundscape_Assessment_Tutorial.ipynb  IoA_Soundscape_Assessment_Tutorial_v2.qmd  OutlierDetection.ipynb  QuickStart.ipynb  QuickStart.qmd  SoundscapyResults.csv  SoundscapyResults.xlsx  _brand.yml  _quarto.yml  acoustic_analysis_results.xlsx  background.qmd  environment.yml  example_settings.yaml  index.qmd  postBuild  soundscape_plot_demo.py  updated_config.yaml
examples/_quarto_reqs/: includes.html  soundscapy-dark.scss  soundscapy-light.scss  styles.css
examples/_site/: 0_QuickStart_for_Beginners.html  0_QuickStart_for_Beginners.ipynb  1_Understanding_Soundscape_Analysis.html  1_Understanding_Soundscape_Analysis.ipynb  1_Understanding_Soundscape_Analysis.qmd  2_Working_with_Soundscape_Survey_Data.html  2_Working_with_Soundscape_Survey_Data.ipynb  2_Working_with_Soundscape_Survey_Data.qmd  3_Advanced_Visualization_Techniques.html  3_Advanced_Visualization_Techniques.ipynb  3_Advanced_Visualization_Techniques.qmd  4_Understanding_Soundscape_Perception_Index.html  4_Understanding_Soundscape_Perception_Index.ipynb  5_Working_with_Soundscape_Databases.html  5_Working_with_Soundscape_Databases.ipynb  6_Soundscape_Assessment_Tutorial.html  6_Soundscape_Assessment_Tutorial.ipynb  BinauralAnalysis.html  HowToAnalyseAndRepresentSoundscapes.html  HowToAnalyseAndRepresentSoundscapes.ipynb  IoA_Soundscape_Assessment_Tutorial_v2.html  IoA_Soundscape_Assessment_Tutorial_v2.ipynb  QuickStart.html  QuickStart.ipynb  about.html  about.ipynb  background.html  background.ipynb  (+5 more)
notebooks/: Cultural-comparison-analysis.ipynb  Lockdown-comparison.ipynb
schemas/: github-issue-forms.json
scratch/: plotting_examples.py  plotting_examples_minimal.py  plotting_minimal.py
scripts/: update-environment-yml.py
soundscapy/: _AnalysisSettings.py  _Binaural.py  __init__.py  _sspy_accessor.py  analysis.py  araus.py  binaural.py  database.py  default_settings.yaml  isd.py  metrics.py  parallel_processing.py  parameters.py  plotting.py  sq_metrics.py  surveys.py  version.py
test/: conftest.py  generate_baselines.py  run_dataclass_tests.py  test__AnalysisSettings.py  test__optionals.py  test_basic.py  test_database.py  test_dataclass_param_model.py  test_isd.py  test_logging.py  test_metrics.py  test_optional_helper.py  test_satp.py  test_slim_install.py  test_sspylogging.py  test_surveys.py
(+453 files in other folders)
