[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools-scm>=8", "setuptools>=64"]

[project]
authors = [
    {email = "mitchellacoustics15@gmail.com", name = "Andrew Mitchell"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Operating System :: OS Independent",
]
dependencies = [
    "loguru>=0.7.2",
    "numpy!=1.26",
    "openpyxl>=3.1.5",
    "packaging>=24.2",
    "pandas>=2.2.2,<3",
    "pandera[io,mypy,pandas]>=0.26.1",
    "plot-likert>=0.5.0",
    "pydantic>=2.8.2",
    "pyyaml>=6.0.2",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
]
description = "A python library for analysing and visualising soundscape assessments."
dynamic = ["version"]
keywords = ["acoustics", "audio analysis", "psychoacoustics", "soundscape"]
license = "BSD-3-Clause"
name = "soundscapy"
readme = "README.md"
requires-python = ">= 3.10"

[project.optional-dependencies]
all = ["soundscapy[audio]", "soundscapy[r]"]
audio = [
    "acoustic-toolbox>=0.1.2",
    "mosqito>=1.2.1",
    "numba>=0.59",
    "scikit-maad>=1.4.3",
    "tqdm>=4.66.5",
]
r = ["rpy2>=3.5.0"]
satp = ["soundscapy[r]"]
spi = ["soundscapy[r]"]

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "mypy>=1.15.0",
    "pandas-stubs>=2.2.3.250308",
    "pre-commit>=4.2.0",
    "ruff>=0.7.2",
    "scipy-stubs>=1.15.2.2",
    "setuptools-scm>=8.3.1",
    "tox>=4.25.0",
    "twine>=6.1.0",
    "types-pyyaml>=6.0.12.20250402",
    "types-seaborn>=0.13.2.20250111",
]
docs = [
    "ipywidgets>=8.1.3",
    # "jupyter-dash>=0.4.2",
    "jupyter-cache>=1.0.1",
    "jupyter>=1.1.1",
    "mkdocstrings>=1.0.4",
    "mkdocstrings-python>=2.0.3",
    "pymdown-extensions>=10.9",
    "zensical>=0.0.11",
]
test = [
    "nbmake>=1.5.4",
    "pytest-cov>=6.0.0",
    "pytest-mpl>=0.17.0",
    "pytest-xdist>=3.6.1",
    "pytest>=8.3.3",
    "setuptools>=72.1.0",
    "xdoctest>=1.1.6",
]

[project.urls]
documentation = "https://soundscapy.readthedocs.io/en/latest/"
repository = "https://github.com/MitchellAcoustics/Soundscapy"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
soundscapy = ["*.csv", "*.yaml", "py.typed"]

[tool.setuptools.packages.find]
exclude = ["*.wav", "docs*", "test*"]
include = ["soundscapy*"]
where = ["src"]

[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "src/soundscapy/_version.py"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.dependencies]
python = "3.12.*"
numpy = "!=1.26"
scipy = ">=1.14.1"
pandas = ">=2.2.2,<3"

[tool.pixi.pypi-dependencies]
soundscapy = { path = ".", editable = true }
pandera = { version = ">=0.26.1", extras = ["io", "mypy", "pandas"] }

[tool.pixi.feature.audio.dependencies]
numba = ">=0.59"
tqdm = ">=4.66.5"

[tool.pixi.feature.audio.pypi-dependencies]
acoustic-toolbox = ">=0.1.2"
mosqito = ">=1.2.1"
scikit-maad = ">=1.4.3"

[tool.pixi.feature.dev.dependencies]
mypy = ">=1.15.0"
pandas-stubs = ">=2.2.3.250308"
pre-commit = ">=4.2.0"
ruff = ">=0.7.2"
scipy-stubs = ">=1.15.2.2"
setuptools-scm = ">=8.3.1"
tox = ">=4.25.0"
twine = ">=6.1.0"
types-pyyaml = ">=6.0.12.20250402"
python-build = ">=1.2.2.post1"

[tool.pixi.feature.docs.dependencies]
ipywidgets = ">=8.1.3"
jupyter-cache = ">=1.0.1"
jupyter = ">=1.1.1"
pymdown-extensions = ">=10.9"
quarto = ">=1.7.32"
zensical = ">=0.0.11"

[tool.pixi.feature.docs.pypi-dependencies]
mkdocstrings = ">=1.0.4"
mkdocstrings-python = ">=2.0.3"

[tool.pixi.feature.r.dependencies]
r-base = ">=4.5.3,<4.6"
r-sn = ">=2.1.3,<3"
r-remotes = ">=2.5.0,<3"
rpy2 = ">=3.6.7,<4"

[tool.pixi.feature.test.dependencies]
nbmake = ">=1.5.4"
pytest-cov = ">=6.0.0"
pytest-mpl = ">=0.17.0"
pytest-xdist = ">=3.6.1"
pytest = ">=8.3.3"
setuptools = ">=72.1.0"
xdoctest = ">=1.1.6"

[tool.pixi.environments]
default = { features = [], solve-group = "default" }
audio = { features = ["audio"], solve-group = "default" }
docs = { features = ["docs"], solve-group = "default" }
r = { features = ["r"], solve-group = "default" }
test = { features = ["test", "r", "audio"], solve-group = "default" }
dev = { features = ["dev", "test", "docs", "r", "audio"], solve-group = "default" }

[tool.pixi.tasks.test]
cmd = "pytest"
description = "Run the test suite"
default-environment = "test"

[tool.pixi.tasks.lint]
cmd = "ruff check ."
description = "Lint the codebase"
default-environment = "dev"

[tool.pixi.tasks.fmt]
cmd = "ruff check . --fix && ruff format ."
description = "Fix lint issues and format code"
default-environment = "dev"

[tool.pixi.tasks.docs-render]
cmd = "cd docs/tutorials && quarto render *.ipynb --to md"
description = "Render tutorial markdown pages"
default-environment = "docs"

[tool.pixi.tasks.docs-build]
cmd = "cd docs/tutorials && quarto render *.ipynb --to md && cd ../.. && zensical build"
description = "Render and build docs"
default-environment = "docs"

[tool.pixi.tasks.docs-serve]
cmd = "cd docs/tutorials && quarto render *.ipynb --to md && cd ../.. && zensical serve"
description = "Serve docs locally"
default-environment = "docs"

[tool.pixi.tasks.install-r-circe]
args = [{ "arg" = "package", "default" = "'MitchellAcoustics/CircE-R'" }]
cmd = "Rscript -e \"remotes::install_github({{ package }}, force=TRUE)\""
description = "Install the CircE package from MitchellAcoustcs/CircE-R"
default-environment = "r"

[tool.coverage]
report = {sort = "cover"}
run = {branch = true, parallel = true, source = ["soundscapy"]}
paths.source = ["src", ".tox*/*/lib/python*/site-packages"]

[tool.mypy]
explicit_package_bases = true
plugins = ["numpy.typing.mypy_plugin"]

[tool.pytest.ini_options]
addopts = ["--color=yes", "--import-mode=importlib", "--verbose", "--xdoctest"]
doctest_optionflags = "NUMBER NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL"
markers = [
    "optional_deps(group): mark tests that depend on optional dependencies. group can be 'audio', etc.",
    "parametrize: mark test as parametrized",
    "skip: mark test as skipped",
    "skipif: mark test as skipped if condition is met",
    "slow: mark test as slow",
    "xfail: mark test as expected to fail",
]
python_classes = "Test*"
python_files = "test_*.py"
python_functions = "test_*"
testpaths = ["src/soundscapy", "test"]

[tool.ruff]
fix = true
force-exclude = true
lint.ignore = [
    "ANN003",
    # missing kwarg type hinting:
    "ANN401",
    "COM812", # trailing commas (ruff-format recommended)
    "D203", # no-blank-line-before-class
    "D212", # multi-line-summary-first-line
    "D407", # removed dashes lines under sections
    "D417", # argument description in docstring (unreliable)
    "FIX002", # fixme (ruff-format recommended)
    "ISC001", # simplify implicit str concatenation (ruff-format recommended)
    "PLR0913", # too many arguments
    "TD002", # Missing author in TODO
    "TD003", # Missing issue link
]
lint.per-file-ignores = {"*.ipynb" = [
    "ANN001",
    "D103",
    "E501", # line too long
    "T201",
    'ANN201',
    'ERA001',
    'PLR2004',
], "*test*.py" = [
    "ANN001", # Missing type annotation for function argument
    "ANN001", # Missing type annotation
    "ANN201", # Missing return type annotation for public function
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D102", # Missing docstring
    "D103", # Missing docstring in public function
    "D104", # Missing docstring in public package
    "ERA001", # Remove commented-out code
    "INP001", # File is part of an implicit namespace package.
    "PGH003", # Use specific rule codes
    "PLC0415", # Import not at top of file
    "PLR2004", # Hardcoded values
    "S101", # Use of `assert` detected
    "SLF001", # Private member/module acces
]}
lint.select = ["ALL"]
lint.isort.known-first-party = ["soundscapy"]
lint.mccabe.max-complexity = 18
lint.pep8-naming.classmethod-decorators = ["classmethod"]

[tool.tomlsort]
all = true
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
overrides."project.classifiers".inline_arrays = false
overrides."tool.coverage.paths.source".inline_arrays = false
overrides."tool.tox.env.docs.commands".inline_arrays = false
overrides."tool.tox.env_run_base.commands".inline_arrays = false
