[project]
authors = [
    { email = "mitchellacoustics15@gmail.com", name = "Andrew Mitchell" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Operating System :: OS Independent",
]
dependencies = [
    "loguru>=0.7.2",
    "numpy!=1.26",
    "openpyxl>=3.1.5",
    "packaging>=24.2",
    "pandas>=2.2.2,<3",
    "pandera[io,mypy,pandas]>=0.26.1",
    "plot-likert>=0.5.0",
    "pydantic>=2.8.2",
    "pyyaml>=6.0.2",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
]
description = "A python library for analysing and visualising soundscape assessments."
version = "0.8.0dev0"
keywords = ["acoustics", "audio analysis", "psychoacoustics", "soundscape"]
license = "BSD-3-Clause"
name = "soundscapy"
readme = "README.md"
requires-python = ">=3.11"

[project.urls]
documentation = "https://soundscapy.readthedocs.io/en/latest/"
repository = "https://github.com/MitchellAcoustics/Soundscapy"

####### Packaging ########

[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.11.8,<0.12"]

[tool.uv.build-backend]
source-include = [
    "*.csv",
    "*.yaml",
    "py.typed",
    "src/soundscapy/r_wrapper/r_circe/*.R",
]
source-exclude = ["*.wav", "docs*", "test*"]

######## Dependencies ########

[project.optional-dependencies]
all = ["soundscapy[audio]", "soundscapy[r]"]
audio = [
    "acoustic-toolbox>=0.1.2",
    "mosqito>=1.2.1",
    "numba>=0.59",
    "scikit-maad>=1.4.3",
    "tqdm>=4.66.5",
]
r = ["rpy2>=3.5.0"]
satp = ["soundscapy[r]"]
spi = ["soundscapy[r]"]

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "pandas-stubs>=2.2.3.250308",
    "ruff>=0.7.2",
    "scipy-stubs>=1.15.2.2",
    "tox>=4.25.0",
    "twine>=6.1.0",
    "types-pyyaml>=6.0.12.20250402",
    "types-seaborn>=0.13.2.20250111",
]
docs = [
    "griffe-fieldz>=0.5.0,<0.6",
    "ipywidgets>=8.1.3",
    # "jupyter-dash>=0.4.2",
    "jupyter-cache>=1.0.1",
    "jupyter>=1.1.1",
    "mkdocstrings>=1.0.4",
    "mkdocstrings-python>=2.0.3",
    "pymdown-extensions>=10.9",
    "zensical>=0.0.11",
    "quarto-cli>=1.9.37,<2",
]
test = [
    "nbmake>=1.5.4",
    "pytest-cov>=6.0.0",
    "pytest-mpl>=0.17.0",
    "pytest-xdist>=3.6.1",
    "pytest>=8.3.3",
    "setuptools>=72.1.0",
    "xdoctest>=1.1.6",
]

######## Tool Configurations ########

[tool.coverage]
report = { sort = "cover" }
run = { branch = true, parallel = true, source = ["soundscapy"] }
paths.source = ["src", ".tox*/*/lib/python*/site-packages"]

[tool.mypy]
explicit_package_bases = true
plugins = ["numpy.typing.mypy_plugin"]

[tool.pyrefly.errors]
bad-override-mutable-attribute = "ignore"

[tool.pytest.ini_options]
addopts = ["--color=yes", "--import-mode=importlib", "--verbose", "--xdoctest"]
doctest_optionflags = "NUMBER NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL"
markers = [
    "optional_deps(group): mark tests that depend on optional dependencies. group can be 'audio', etc.",
    "parametrize: mark test as parametrized",
    "skip: mark test as skipped",
    "skipif: mark test as skipped if condition is met",
    "slow: mark test as slow",
    "xfail: mark test as expected to fail",
]
python_classes = "Test*"
python_files = "test_*.py"
python_functions = "test_*"
testpaths = ["src/soundscapy", "test"]

[tool.ruff]
fix = true
force-exclude = true
lint.ignore = [
    "ANN003",
    # missing kwarg type hinting:
    "ANN401",
    "COM812",  # trailing commas (ruff-format recommended)
    "D203",    # no-blank-line-before-class
    "D212",    # multi-line-summary-first-line
    "D407",    # removed dashes lines under sections
    "D417",    # argument description in docstring (unreliable)
    "FIX002",  # fixme (ruff-format recommended)
    "ISC001",  # simplify implicit str concatenation (ruff-format recommended)
    "PLR0913", # too many arguments
    "TD002",   # Missing author in TODO
    "TD003",   # Missing issue link
]
lint.per-file-ignores = { "*.ipynb" = [
    "ANN001",
    "D103",
    "E501",    # line too long
    "T201",
    'ANN201',
    'ERA001',
    'PLR2004',
], "*test*.py" = [
    "ANN001",  # Missing type annotation for function argument
    "ANN001",  # Missing type annotation
    "ANN201",  # Missing return type annotation for public function
    "D100",    # Missing docstring in public module
    "D101",    # Missing docstring in public class
    "D102",    # Missing docstring
    "D103",    # Missing docstring in public function
    "D104",    # Missing docstring in public package
    "ERA001",  # Remove commented-out code
    "INP001",  # File is part of an implicit namespace package.
    "PGH003",  # Use specific rule codes
    "PLC0415", # Import not at top of file
    "PLR2004", # Hardcoded values
    "S101",    # Use of `assert` detected
    "SLF001",  # Private member/module acces
] }
lint.select = ["ALL"]
lint.isort.known-first-party = ["soundscapy"]
lint.mccabe.max-complexity = 18
lint.pep8-naming.classmethod-decorators = ["classmethod"]

[tool.tomlsort]
all = true
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
overrides."project.classifiers".inline_arrays = false
overrides."tool.coverage.paths.source".inline_arrays = false
overrides."tool.tox.env.docs.commands".inline_arrays = false
overrides."tool.tox.env_run_base.commands".inline_arrays = false

###### Pixi Workspace Management ######

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64", "osx-64", "win-64"]
preview = ["pixi-build"]

[tool.pixi.package.build]
backend = { name = "pixi-build-python", version = "0.*" }

[tool.pixi.package.build.config]
ignore-pypi-mapping = false

[tool.pixi.pypi-dependencies]
soundscapy = { path = ".", editable = true }

[tool.pixi.environments]
default = { features = ["all", "dev"], solve-group = "default" }
all = { features = ["all"], solve-group = "default" }
audio = { features = ["audio"], solve-group = "default" }
dev = { features = ["dev", "test"], solve-group = "default" }
r = { features = ["r"], solve-group = "default" }
test = { features = ["test"], solve-group = "default" }
docs = { features = ["docs"] }

test-py311 = ["py311", "test"]
test-py311-audio = ["py311", "test", "audio"]
test-py311-r = ["py311", "test", "r"]
test-py311-all = ["py311", "test", "all"]

test-py312 = ["py312", "test"]
test-py312-audio = ["py312", "test", "audio"]
test-py312-r = ["py312", "test", "r"]
test-py312-all = ["py312", "test", "all"]

test-py313 = ["py313", "test"]
test-py313-audio = ["py313", "test", "audio"]
test-py313-r = ["py313", "test", "r"]
test-py313-all = ["py313", "test", "all"]


[tool.pixi.dependencies]
scipy = ">=1.17.1,<2"

[tool.pixi.feature.dev.dependencies]
ipykernel = ">=7.2.0,<8"
pip = ">=26.1.1,<27"

[tool.pixi.feature.py311.dependencies]
python = "3.11.*"

[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.feature.py313.dependencies]
python = "3.13.*"

[tool.pixi.feature.docs.dependencies]
python = ">=3.14.4,<3.15"

[tool.pixi.feature.r.dependencies]
rpy2 = ">=3.5.0"
r-base = ">=4.4.3,<4.6"
r-sn = ">=2.1.3,<3"

[tool.pixi.tasks]
lint = { cmd = "ruff check .", description = "Lint the codebase", default-environment = "dev" }
format = { cmd = "ruff check . --fix && ruff format .", description = "Fix lint issues and format code", default-environment = "dev" }

docs-render = { cmd = "rm -rf docs/tutorials/rendered && quarto render examples/*.ipynb --to md --output-dir ../docs/tutorials/rendered", description = "Render tutorial markdown pages", default-environment = "docs" }
docs-build = { depends-on = [
    "docs-render",
], cmd = "zensical build", description = "Render and build docs", default-environment = "docs" }
docs-serve = { depends-on = [
    "docs-render",
], cmd = "zensical serve", description = "Serve docs locally", default-environment = "docs" }

[tool.pixi.feature.test.tasks.test-base]
cmd = "python --version && pytest -k 'not optional_deps' --ignore-glob='*iso_plot.py'"
default-environment = "test-py313"

[tool.pixi.feature.test.tasks.test-audio]
cmd = "python --version && pytest -k 'not optional_deps or optional_deps and audio' --ignore-glob='*iso_plot.py'"
default-environment = "test-py313-audio"

[tool.pixi.feature.test.tasks.test-r]
cmd = "python --version && pytest -k 'not optional_deps or optional_deps and spi or skip_if_deps and spi'"
default-environment = "test-py313-r"

[tool.pixi.feature.test.tasks.test-all]
cmd = "python --version && pytest"
default-environment = "test-py313-all"

[tool.pixi.tasks.test]
depends-on = [
    { task = "test-base", environment = "test-py311" },
    { task = "test-base", environment = "test-py312" },
    { task = "test-base", environment = "test-py313" },
    { task = "test-audio", environment = "test-py311-audio" },
    { task = "test-audio", environment = "test-py312-audio" },
    { task = "test-audio", environment = "test-py313-audio" },
    { task = "test-r", environment = "test-py311-r" },
    { task = "test-r", environment = "test-py312-r" },
    { task = "test-r", environment = "test-py313-r" },
    { task = "test-all", environment = "test-py311-all" },
    { task = "test-all", environment = "test-py312-all" },
    { task = "test-all", environment = "test-py313-all" },
]
