[project]
authors = [
    { email = "andrew.mitchell.research@gmail.com", name = "Andrew Mitchell" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Operating System :: OS Independent",
]
description = "A python library for analysing and visualising soundscape assessments."
version = "0.8.5"
keywords = ["acoustics", "audio analysis", "psychoacoustics", "soundscape"]
license = { text = "BSD-3-Clause" }
name = "soundscapy"
readme = "README.md"
requires-python = ">= 3.11"
dependencies = [
    "lazy-loader>=0.4",
    "loguru>=0.7.2",
    "numpy>=2.1.3,<2.4",
    "pandas[excel]>=2.2.2,<3.0",
    "pandera[io,mypy,pandas]>=0.26.1",
    "plot-likert>=0.5.0",
    "pydantic>=2.8.2",
    "pyyaml>=6.0.2",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
]

[project.optional-dependencies]
all = ["soundscapy[audio]", "soundscapy[r]"]
audio = [
    "acoustic-toolbox>=0.1.2",
    "mosqito>=1.2.1",
    "numba>=0.59",
    "scikit-maad>=1.4.3",
    "tqdm>=4.66.5",
]
r = ["rpy2>=3.5.0"]

[project.urls]
documentation = "https://soundscapy.readthedocs.io/en/latest/"
repository    = "https://github.com/MitchellAcoustics/Soundscapy"

####### Packaging ########

[build-system]
requires      = ["uv_build>=0.11.12,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
source-include = [
    "*.csv",
    "*.yaml",
    "py.typed",
    "src/soundscapy/r_wrapper/r_circe/*.R",
]
source-exclude = ["*.wav", "docs*", "test*"]

[tool.uv.pip]
universal = true

[[tool.uv.index]]
name        = "pypi"
url         = "https://pypi.org/simple"
publish-url = "https://upload.pypi.org/legacy/"

[[tool.uv.index]]
name        = "test-pypi"
url         = "https://test.pypi.org/simple"
publish-url = "https://test.pypi.org/legacy/"

######## Tool Configurations ########

[tool.coverage]
report       = { sort = "cover" }
run          = { branch = true, parallel = true, source = ["soundscapy"] }
paths.source = ["src"]

[tool.mypy]
explicit_package_bases = true

[tool.pyrefly.errors]
bad-override-mutable-attribute = "ignore"

[tool.pytest.ini_options]
addopts = ["--color=yes", "--import-mode=importlib", "--verbose", "--xdoctest"]
doctest_optionflags = "NUMBER NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL"
markers = [
    "parametrize: mark test as parametrized",
    "skip: mark test as skipped",
    "skipif: mark test as skipped if condition is met",
    "slow: mark test as slow",
    "xfail: mark test as expected to fail",
]
python_classes = "Test*"
python_files = "test_*.py"
python_functions = "test_*"
testpaths = ["src/soundscapy", "test"]

[tool.ruff]
fix = true
force-exclude = true
lint.ignore = [
    "ANN003",
    # missing kwarg type hinting:
    "ANN401",
    "COM812",  # trailing commas (ruff-format recommended)
    "D203",    # no-blank-line-before-class
    "D212",    # multi-line-summary-first-line
    "D407",    # removed dashes lines under sections
    "D417",    # argument description in docstring (unreliable)
    "FIX002",  # fixme (ruff-format recommended)
    "ISC001",  # simplify implicit str concatenation (ruff-format recommended)
    "PLR0913", # too many arguments
    "TD002",   # Missing author in TODO
    "TD003",   # Missing issue link
]
lint.per-file-ignores = { "*.ipynb" = [
    "ANN001",
    "D103",
    "E501",    # line too long
    "T201",
    'ANN201',
    'ERA001',
    'PLR2004',
], "*test*.py" = [
    "ANN001",  # Missing type annotation for function argument
    "ANN001",  # Missing type annotation
    "ANN201",  # Missing return type annotation for public function
    "D100",    # Missing docstring in public module
    "D101",    # Missing docstring in public class
    "D102",    # Missing docstring
    "D103",    # Missing docstring in public function
    "D104",    # Missing docstring in public package
    "ERA001",  # Remove commented-out code
    "INP001",  # File is part of an implicit namespace package.
    "PGH003",  # Use specific rule codes
    "PLC0415", # Import not at top of file
    "PLR2004", # Hardcoded values
    "S101",    # Use of `assert` detected
    "SLF001",  # Private member/module acces
] }
lint.select = ["ALL"]
lint.isort.known-first-party = ["soundscapy"]
lint.mccabe.max-complexity = 18
lint.pep8-naming.classmethod-decorators = ["classmethod"]

[tool.tomlsort]
all                                                      = true
spaces_indent_inline_array                               = 4
trailing_comma_inline_array                              = true
overrides."project.classifiers".inline_arrays            = false
overrides."tool.coverage.paths.source".inline_arrays     = false
